# epiloglite

./: .gitignore  .markdownlint.json  .prettierrc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  PROGRESS_SUMMARY.md  README.md  SECURITY.md  STATUS.md  STORED_PROCEDURES_IMPLEMENTATION.md  coverage.sh  lcov.info
.github/: CODEOWNERS  copilot-instructions.md
.github/instructions/: Global.instructions.md  Technologies.instructions.md
.github/prompts/: UnitTest.md
.github/templates/: CONTRIBUTING.md.template  Cargo.toml.template  LICENSE-Apache.md.template  README.md.template  SECURITY.md.template  svelte.config.csp.js.template  svelte.config.js.template  tailwind.config.ts.template  tsconfig.json.template  vite.config.ts.template
.github/workflows/: copilot-setup-steps.yml  rust-ci.yml  rust.yml
.local/: syncdesign.sh
design/: ARCHITECTURE.md  C-CPP-Interface.md  FILEFORMAT.md  QUERYPLANNER.md  TRANSACTIONS.md  VIRTUALMACHINE.md
design/sql_syntax/: Index.md
design/sql_syntax/Comments/: Multi-line Comment.md  Single Line Comment.md
design/sql_syntax/Expressions/: Aggregate.md  Column Constraint.md  Column Definition.md  Conflict Clause.md  Date Value.md  Expression.md  Filter Clause.md  Function Arguments.md  Function.md  Indexed Column.md  Join Constraint.md  Join Operator.md  Module Argument.md  Qualified Table Name.md  Result Column.md  Returning Clause.md  Signed Number.md  Table Constraint.md  Table Options.md  Table or Subquery.md  Time Value.md  Upsert Clause.md
design/sql_syntax/Identifiers/: Aggregate Function Name.md  Alias.md  Collation Name.md  Column Name.md  Index Name.md  Module Name.md  Save Point Name.md  Schema Name.md  Table Name.md  Trigger Name.md  View Name.md
design/sql_syntax/Statements/: ALTER TABLE.md  ANALYZE.md  ATTACH.md  BEGIN TRANSACTION.md  COMMIT  TRANSACTION.md  CREATE.md  DELETE.md  DETACH.md  DROP.md  END TRANSACTION.md  EXPLAIN.md  INSERT.md  PRAGMA.md  REINDEX.md  RELEASE.md  ROLLBACK TRANSACTION.md  SAVEPOINT.md  SELECT.md  UPDATE.md  VACUUM.md
docs/: GRAPH_SUPPORT.md  ImplementationPlan.md  NO_STD.md  SERVER.md  WAL_IMPLEMENTATION.md  session_notes.md
docs/Unicode/: Unicode.md
docs/design/: 00_Frontmtter.md  01_Overview.md  02_Architecture_Overview.md  03_Transaction_Model.md  04_Storage_and_Pages.md  05_Journaling_and_Recovery.md  06_Performance_Optimization.md  07_Future_Extensions.md  ARCHITECTURE.md  ASYNC_IO.md  CollectionsRecords.md  FILEFORMAT.md  NFRs.md  README.md  Requirements.md  STORED_PROCEDURES.md  TODO.md
docs/design/agents/: CODE_REVIEW_2024.md  IMPLEMENTATION_SUMMARY.md  README.md  SUBQUERY_OPTIMIZATION.md  TODO.md
docs/design/architecture/: DataFlow.md  DeploymentArchitecture.md  NFRs.md  README.md  Requirement_1.md  Requirement_2.md  Requirement_3.md  Requirement_4.md  Requirement_5.md  Requirement_6.md  SystemArchitecture.md
docs/design/persistence/: FileFormat.md  JournalFirstCommitLastOperation.md
docs/design/sql_syntax/: Index.md
epiloglite-core/: Cargo.toml  README.md
epiloglite-core/src/: cint.rs  container.rs  datatype.rs  fieldmetadata.rs  flags.rs  identifier.rs  lib.rs  offsetpointer.rs  recordtrait.rs  semver.rs  utility.rs
epiloglite-core/src/tests/: cint_tests.rs  crc_tests.rs  datatype_tests.rs  identifier_tests.rs  utility_tests.rs
epiloglite-derive/: Cargo.toml
epiloglite-derive/src/: lib.rs
epiloglite-derive/tests/: collection_macro.rs  record_flags_type_tests.rs
examples/: async_io.rs.disabled  basic_usage.rs  graph_example.rs  query_builder_example.rs  savepoint_example.rs  stored_procedures.rs  subquery_optimization_example.rs  test_view.rs
examples/embedded/: README.md  no_std_basic.rs
server/: Cargo.toml
server/src/: configuration.rs  main.rs
server/src/configuration/: logging.rs
server/src/server/: client.rs  mod.rs
src/: capi.rs  command.rs  constants.rs  eplite.rs  lib.rs  logging.rs  os.rs  parser.rs  semver.rs
src/command/: lexer.rs
src/eplite/: cabi.rs  collection.rs  command.rs  config.rs  constants.rs  database.rs  databaseconfig.rs  error.rs  graph.rs  index.rs  journalentry.rs  logging.rs  objects.rs  optimizer.rs  orderby.rs  orm.rs  os.rs  parser.rs  permissions.rs  persistence.rs  procedures.rs  query_builder.rs  server.rs  shared.rs  sql.rs  sqlite.rs  storage.rs  traits.rs  types.rs  utility.rs
src/eplite/command/: code_generator.rs  parser.rs  processor.rs  tokenizer.rs  virtual_machine.rs
src/eplite/objects/: column.rs  index.rs  value.rs
src/eplite/os/: async_vfs.rs  backpressure.rs  file.rs  performance.rs  vfs.rs
src/eplite/parser/: clauses.rs  expressions.rs  identifiers.rs  keywords.rs  statements.rs  symbols.rs
src/eplite/persistence/: backingstore.rs  backingstores.rs  btree.rs  cell.rs  constants.rs  (+15 more)
src/os/: async_file.rs  file.rs  performance.rs  sysinfo.rs  vfs.rs
src/parser/: clauses.rs  date_time_functions.rs  expression.rs  functions.rs  literals.rs  operators.rs  sql.pest  statements.rs
src/tests/: semver_tests.rs
src/traits/: file.rs
test_data/: ALTER.sql  EXPLAIN.sql  Semis.sql
test_data/negative/: EXPLAIN.sql
tests/: SQL_TEST_FILES.md  adversarial_tests.rs  integration_test.rs  semver_tests.rs  stored_procedures_test.rs  wal_integration_test.rs
tests/sql_negative/: README.md  aggregate_errors.sql  buffer_overflow_attempts.sql  constraint_violations.sql  edge_cases.sql  injection_attempts.sql  invalid_identifiers.sql  invalid_operations.sql  join_errors.sql  malformed_values.sql  numeric_errors.sql  operator_errors.sql  quote_escaping_errors.sql  syntax_errors.sql  transaction_errors.sql  type_errors.sql
tests/sql_positive/: README.md  all_data_types.sql  case_variations.sql  complex_queries.sql  create_table_basic.sql  create_table_constraints.sql  delete_basic.sql  insert_basic.sql  savepoints.sql  select_aggregates.sql  select_basic.sql  select_combinations.sql  select_group_by.sql  select_joins.sql  select_order_by.sql  select_where.sql  select_without_optional_clauses.sql  transactions.sql  update_basic.sql  whitespace_variations.sql
tests/sqlite/: test.db
(+104 files in other folders)
