[package]
name = "epiloglite"
version = "0.1.0"
authors = ["Jen Eleniel"]
description = "EpilogLite is a port of SQLite to Rust. Copyright (C) 2024 Tony M. Bishop"
license = "LGPL-3.0-only"
keywords = ["database", "sqlite", "relational", "sql"]
categories = ["database-implementations"]
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
flagset = { version = "0.4.6", features = ["serde"] }
logos = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
bincode = "1.3"
regex = "1.11"
tokio = { version = "1", features = ["full"], optional = true }
config = "0.14"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4"
# Server dependencies
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", optional = true }
async-graphql = { version = "7.0", optional = true }
async-graphql-axum = { version = "7.0", optional = true }
bcrypt = { version = "0.15", optional = true }
jsonwebtoken = { version = "9.3", optional = true }

[features]
default = ["std", "async"]
std = []
async = ["tokio", "std"]
no-std = []
capi = ["std"]
server = ["std", "axum", "tower", "tower-http", "tokio-rustls", "rustls", "async-graphql", "async-graphql-axum", "bcrypt", "jsonwebtoken", "tokio"]
