[package]
name = "epiloglite"
version.workspace = true
edition.workspace = true
description = "EpilogLite is a pure Rust implementation of SQLite, designed for safety, reliability, and performance. It provides a drop-in compatible alternative to SQLite with modern Rust idioms."
license.workspace = true
keywords.workspace = true
categories.workspace = true

[workspace]
resolver = "3"
members = [".", "epiloglite-derive"]

[workspace.package]
version = "1.0.0-alpha.1"
edition = "2024"
license = "MIT or Apache 2.0"
keywords = [
  "database",
  "embedded",
  "graph",
  "relational",
  "sql",
  "sqlite",
  "vector"
]
categories = ["database-implementations"]

[workspace.dependencies]
async-trait = { version = "0.1" }
bincode = { version = "2.0.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
crc-adler = { version = "0.1.1" }
epiloglite-core = { path = "./epiloglite-core" }
epiloglite-derive = { path = "epiloglite-derive" }
flagset = { version = "0.4.6", features = ["serde"] }
log = { version = "0.4" }
logos = { version = "0.15.0" }
num-traits = { version = "0.2.19", features = ["i128"] }
regex = { version = "1.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
strum = { version = "0.27.2", features = ["derive"] }
sysinfo = { version = "0.37.2", features = ["serde"] }
thiserror = { version = "2.0" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.18.1", features = ["fast-rng", "serde", "v4"] }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
bincode.workspace = true
chrono.workspace = true
crc-adler.workspace = true
epiloglite-core.workspace = true
epiloglite-derive.workspace = true
flagset.workspace = true
log.workspace = true
logos.workspace = true
num-traits.workspace = true
once_cell = "1.21.3"
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[features]
default = []
# Enable the "C" ABI compatibility layer (requires std)
cabi = []

[lints]
workspace = true

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false
