[package]
name = "epiloglite-core"
version = "0.1.0"
edition = "2024"
description = "Core types and utilities for EpilogLite database engine."
license = "MIT OR Apache-2.0"

[dependencies]
bincode = { workspace = true }
crc-adler = { workspace = true }
flagset.workspace = true
num-traits = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
